Revision history for Cv.pm

0.21 - 2012-12-27 (working)
     * fixed compile error on cygwin (can't handle pp-stmt in typemap?)
     * fixed AUTOLOAD to keep $@
     * mearged Highgui ...
     * fixed cvError if CC=cc
     * fixed cvError on OpenCV-1.1

0.19a - 2012-12-12
     * fixed t/4CvVideoWriter.t

0.19 - 2012-12-12
     * fixed croak error location in AUTOLOAD relaying at first
     * removed Cv::alias
     * removed global data in Cv.xs
     * rewrote cv::error to use Perl error handler $Cv::ERROR
     * rewrote other callbacks
     * separated Highgui
     * s/:nomore/-more/
     * fixed // op for perl-5.8.9
     * rewrote CV_FOURCC
     * MYEXTLIB is no longer needed
     * fixed ContourArea's retval

0.18 - 2012-11-28
     * fixed tools/dumpconst.pl
     * fixed lib/Cv/Seq/*pm to clear stmt "no warnings"
     * added some t/*t
     * rewrote typemap again
     * fixed croak error location in AUTOLOAD relaying
     * added initializer for Cv::MatND::new
     * fixed WarpAffine, WarpPerspective
     * added m_get, Transform

0.17 - 2012-11-13
     * fixed alias boundingRect
     * fixed Affine retval
     * rewrote ToArray
     * fixed BoundingRect
     * added fallback/Constant.pm-2.4.3
     * added some sample/*pl
     * rewrote typemap.
     * removed xlib/

0.16 - 2012-11-1
     * separating experimental code into Cv/More.pm
     * added initializer for Cv::Mat::new in More.pm
     * rewriting Nihongo.pod
     * fixed Cv::Flipbook has memory leak
     * added Cv/Flipbook-ja.pod, Cv/Pango-ja.pod
     * added Cv/More-ja.pod
     * fixed cvBoxPoints retval
     * added Cv::More import & unimport

0.15 - 2012-10-01
     * fixed cvFitLine()
     * fixed stor(), and dst()
     * rewrite Cv/Constant.pm using tools/dumpconst.pl and fallback/
     * added cvGetBuildInformation()

0.14 - 2012-05-16
     * use AutoLoader
     * use EXPORT_* for importing
     * added ExtUtils::MM_Cygwin as rebase
     * fixed using dims of arr instead of dims of arg(idx)