@@ -93,31 +93,22 @@ if (8) {
 }
 
 
-SKIP: {
-	skip("need v2.2.0+", 3) unless cvVersion() >= 2.002000;
-	Cv->setErrMode(1);
-	my $can_hook = Cv->getErrMode() == 1;
-	$can_hook = 0 if $^O eq 'cygwin';
-	Cv->setErrMode(0);
-	skip("can't hook cv:error", 3) unless $can_hook;
+if (11) {
+	my $src = Cv::Mat->new([240, 320], CV_8UC3);
+	my $submat = eval { $src->GetRows(10, 10) };
+	ok(!$@);
+}
 
-	if (11) {
-		my $src = Cv::Mat->new([240, 320], CV_8UC3);
-		my $submat = eval { $src->GetRows(10, 10) };
-		ok(!$@);
-	}
+if (12) {
+	my $src = Cv::Mat->new([240, 320], CV_8UC3);
+	my $submat = eval { $src->GetRows(10, 0) };
+	ok($@);
+}
 
-	if (12) {
-		my $src = Cv::Mat->new([240, 320], CV_8UC3);
-		my $submat = eval { $src->GetRows(10, 0) };
-		ok($@);
-	}
-
-	if (13) {
-		my $src = Cv::Mat->new([240, 320], CV_8UC3);
-		no warnings 'redefine';
-		local *Cv::Mat::new = sub { undef };
-		my $submat = eval { $src->GetRows(100, 200) };
-		like($@, qr/submat is not of type CvMat/);
-	}
+if (13) {
+	my $src = Cv::Mat->new([240, 320], CV_8UC3);
+	no warnings 'redefine';
+	local *Cv::Mat::new = sub { undef };
+	my $submat = eval { $src->GetRows(100, 200) };
+	like($@, qr/submat is not of type CvMat/);
 }
